# ChangeLog for dev-lang/niecza-bin
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/niecza-bin/ChangeLog,v 1.1 2012/08/22 03:28:07 patrick Exp $

*niecza-bin-20 (22 Aug 2012)

  22 Aug 2012; Patrick Lauer <patrick@gentoo.org> +metadata.xml,
  +niecza-bin-20.ebuild:
  Initial import, ebuilds by me